tdf#164223 invert alpha mask for JPEG images

Change-Id: I6f1070b8cc38a56168ea5248fa4b011f04d83c71
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180746
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Tested-by: Jenkins